Add overrides for peer deps

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,5 +67,16 @@
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "overrides": {
+    "vaul": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    },
+    "react-day-picker": {
+      "react": "$react",
+      "react-dom": "$react-dom",
+      "date-fns": "$date-fns"
+    }
   }
 }
